added right click popup

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,12 +9,12 @@ Size=83,46
 Collapsed=0
 
 [Window][Sample node1]
-Pos=566,269
+Pos=520,290
 Size=274,65
 Collapsed=0
 
 [Window][hydrogen]
-Pos=220,121
+Pos=190,213
 Size=135,48
 Collapsed=0
 
@@ -24,12 +24,17 @@ Size=128,48
 Collapsed=0
 
 [Window][Sample node 2]
-Pos=886,550
+Pos=579,466
 Size=358,48
 Collapsed=0
 
 [Window][chlorine]
-Pos=36,470
+Pos=285,427
 Size=135,48
+Collapsed=0
+
+[Window][right click window]
+Pos=413,769
+Size=80,150
 Collapsed=0
 
