--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "bezier"
+name = "illogical"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 glam = "0.30.3"
+imgui = "0.12.0"
 raylib = { version = "5.5.1", features = ["imgui"] }
