bigger pins and right click to remove wire

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,12 +9,12 @@ Size=83,46
 Collapsed=0
 
 [Window][Sample node1]
-Pos=520,290
+Pos=570,224
 Size=274,65
 Collapsed=0
 
 [Window][hydrogen]
-Pos=190,213
+Pos=168,154
 Size=135,48
 Collapsed=0
 
@@ -24,17 +24,102 @@ Size=128,48
 Collapsed=0
 
 [Window][Sample node 2]
-Pos=579,466
+Pos=711,763
 Size=358,48
 Collapsed=0
 
 [Window][chlorine]
-Pos=285,427
+Pos=40,540
 Size=135,48
 Collapsed=0
 
 [Window][right click window]
-Pos=413,769
-Size=80,150
+Pos=578,644
+Size=52,35
+Collapsed=0
+
+[Window][NAND gate]
+Pos=590,484
+Size=155,99
+Collapsed=0
+
+[Window][Sample node 2  #1]
+Pos=634,339
+Size=358,48
+Collapsed=0
+
+[Window][chlorine  #3]
+Pos=250,313
+Size=135,48
+Collapsed=0
+
+[Window][hydrogen  #2]
+Pos=138,111
+Size=135,48
+Collapsed=0
+
+[Window][Sample node1  #0]
+Pos=546,540
+Size=274,65
+Collapsed=0
+
+[Window][NAND gate  #4]
+Pos=1247,473
+Size=171,79
+Collapsed=0
+
+[Window][NAND gate  #5]
+Pos=94,517
+Size=171,79
+Collapsed=0
+
+[Window][NAND gate  #6]
+Pos=776,500
+Size=171,79
+Collapsed=0
+
+[Window][NAND gate  #0]
+Pos=748,98
+Size=171,79
+Collapsed=0
+
+[Window][NAND gate  #1]
+Pos=119,96
+Size=171,79
+Collapsed=0
+
+[Window][NAND gate  #2]
+Pos=416,284
+Size=171,79
+Collapsed=0
+
+[Window][NAND gate  #3]
+Pos=1020,434
+Size=171,79
+Collapsed=0
+
+[Window][NAND gate  #7]
+Pos=1026,330
+Size=171,79
+Collapsed=0
+
+[Window][NAND gate  #8]
+Pos=733,775
+Size=171,79
+Collapsed=0
+
+[Window][NAND gate  #9]
+Pos=935,674
+Size=155,65
+Collapsed=0
+
+[Window][NAND gate  #10]
+Pos=767,536
+Size=155,65
+Collapsed=0
+
+[Window][NAND gate  #11]
+Pos=265,359
+Size=155,65
 Collapsed=0
 
